--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prebuild": "node generate-version.js",
+    "build": "react-scripts build"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.7",
